2011-04-19  Hans Wennborg  <hans@chromium.org>

        Reviewed by Tony Gentilcore.

        IndexedDB: Remove accidental header include directive from LevelDB backend.
        https://bugs.webkit.org/show_bug.cgi?id=58872

        No new functionality, no new tests.

        * storage/IDBLevelDBBackingStore.cpp:

2011-04-19  Herczeg Zoltan  <zherczeg@webkit.org>

        Build fix.

        LEFilter change doesn't compile on ARM neon targets
        https://bugs.webkit.org/show_bug.cgi?id=58671

        Thanks for Charlie Lee to fixing this.

        * WebCore.gypi:

2011-04-19  Daniel Bates  <dbates@webkit.org>

        Attempt to fix the Qt Linux Release Minimal build after changeset 84225
        <http://trac.webkit.org/changeset/84225> (https://bugs.webkit.org/show_bug.cgi?id=52788).

        * dom/EventDispatcher.cpp:
        (WebCore::EventDispatcher::ensureEventAncestors): Add ENABLE(SVG) guards around call
        to Node::svgShadowHost() since this method is only defined when building with SVG enabled.

2011-04-18  Dominic Cooney  <dominicc@chromium.org>

        Reviewed by Dimitri Glazkov.

        Makes SVG shadow roots and DOM shadow roots distinct.
        https://bugs.webkit.org/show_bug.cgi?id=52788

        Not a functional change. Covered by existing SVG tests.

        * dom/EventDispatcher.cpp:
        (WebCore::findElementInstance):
        (WebCore::EventDispatcher::adjustToShadowBoundaries):
        (WebCore::EventDispatcher::adjustRelatedTarget):
        (WebCore::EventDispatcher::ensureEventAncestors):
        * dom/Node.cpp:
        (WebCore::Node::setShadowHost):
        (WebCore::Node::svgShadowHost):
        (WebCore::Node::shadowTreeRootNode):
        * dom/Node.h:
        (WebCore::Node::isSVGShadowRoot):
        (WebCore::Node::parentNode):
        (WebCore::Node::parentNodeGuaranteedHostFree):
        * rendering/svg/RenderSVGShadowTreeRootContainer.cpp: