@@ -1,3 +1,15 @@
+2011-04-19  Andrey Adaikin  <aandrey@google.com>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: NPE in TextEditorModel
+        https://bugs.webkit.org/show_bug.cgi?id=58870
+
+        * inspector/front-end/ResourcesPanel.js:
+        (WebInspector.ResourcesPanel.prototype._frameAdded):
+        * inspector/front-end/TextEditorModel.js:
+        (WebInspector.TextEditorModel.prototype.setText):
+
 2011-04-19  Hans Wennborg  <hans@chromium.org>
 
         Reviewed by Tony Gentilcore.
